<resources>
    <string name="app_name">Body Compostion Assistance</string>
    <string name="food_info">Information</string>
    <string name="hint_food_name">Name</string>
    <string name="hint_food_cal">Calories</string>
    <string name="hint_food_carb">Carbohydrates</string>
    <string name="hint_food_fat">Fats</string>
    <string name="hint_food_prot">Protein</string>
    <string name="hint_food_desc">Description</string>
    <string name="edit_activity_title_new_food">Add New Food</string>

    <string name="save_action">Save</string>
    <string name="delete_action">Delete</string>
    <string name="insert_food_failed">Error with saving food</string>
    <string name="insert_food_successful">Food saved successfully</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search for Food</string>
    <string name="edit_activity_title_edit_food">Edit Food</string>
    <string name="edit_food_failed">Error with Updating Food</string>
    <string name="edit_food_successful">Food successfully updated</string>
    <string name="unsaved_dialog_message">Do you want to discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="delete_dialog_message">Delete this food?</string>
    <string name="delete">Delete</string>
    <string name="edit_delete_food_failed">Error in deleting food</string>
    <string name="edit_activity_food_successful">Food successfully deleted</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_cal">Unknown Calories</string>
    <string name="RegistrationSuccessful">Registration successfull</string>
    <string name="create_meal">Create your meal</string>
    <string name="meal_result">Your Meal</string>
    <string name="edit">Edit Food</string>
</resources>
